load("@rules_deb//distroless:defs.bzl", "flatten")
load("@rules_oci//oci:defs.bzl", "oci_image", "oci_load")
load("@tar.bzl", "tar")

# Locally-built SONiC debs installed on top of docker-config-engine-trixie
# (docker-sysmgr/Dockerfile.j2 lines 19-25: install_debian_packages of
# docker_sysmgr_debs -> sysmgr_*.deb; rules/docker-sysmgr.mk
# `$(DOCKER_SYSMGR)_DEPENDS += $(SYSMGR)`), plus the SONiC-built runtime
# dependencies of the Bazel rebootbackend/librebootgnoi that the distroless
# config-engine-trixie base does not carry. `flatten(deb_data)` does NOT resolve
# Depends, so every runtime dep not already in the base is listed explicitly
# (same technique as docker-swss-layer-trixie / docker-nat). Each package ships
# both `_data` (file contents) and `_statusd` (dpkg status.d stub) so `dpkg -l`
# inside the container lists it.
#
# Why these debs (verified via `objdump -p rebootbackend` DT_NEEDED + `ldd`
# inside the container until 0 "not found"):
#   - sysmgr:            /usr/bin/rebootbackend + /usr/lib/<triplet>/librebootgnoi.*
#   - libprotobuf29:     rebootbackend & librebootgnoi link the Bazel-built
#                        protobuf shared lib (soname .so.29, from
#                        @sonic_build_infra//protobuf:libprotobuf_shared — the
#                        proto gencode toolchain is protobuf 29). Make instead
#                        links apt libprotobuf.so.32; the .29-vs-.32 soname is a
#                        documented, accepted sonic-sysmgr difference (its deb
#                        migration table row #1) that is impossible to avoid
#                        without changing the shared protobuf toolchain. So the
#                        image ships the Bazel .so.29 that the binaries actually
#                        require.
#   - libnl-3/genl-3/nf-3/route-3-200: rebootbackend dynamic_deps the Bazel
#                        @libnl3 shared libs (and libswsscommon.so.0 links them
#                        too). Make ships the same four libnl runtime libs via
#                        swsscommon's apt Depends; here they come from the
#                        SONiC-patched @libnl3 debs (matches the linked ABI).
flatten(
    name = "sonic_pkgs",
    deduplicate = True,
    tars = [
        # SYSMGR (rules/docker-sysmgr.mk: _DEPENDS += $(SYSMGR)).
        "@sonic-sysmgr//:sysmgr_1.0.0.deb_data",
        "@sonic-sysmgr//:sysmgr_1.0.0.deb_statusd",
        # libprotobuf29 — Bazel protobuf runtime the sysmgr binaries link.
        "@sonic_build_infra//protobuf:libprotobuf29_29.0.0.deb_data",
        "@sonic_build_infra//protobuf:libprotobuf29_29.0.0.deb_statusd",
        # libnl3 family — SONiC-patched, linked by rebootbackend + swsscommon.
        "@libnl3//:libnl-3-200_3.7.0-0.2+b1sonic1.deb_data",
        "@libnl3//:libnl-3-200_3.7.0-0.2+b1sonic1.deb_statusd",
        "@libnl3//:libnl-genl-3-200_3.7.0-0.2+b1sonic1.deb_data",
        "@libnl3//:libnl-genl-3-200_3.7.0-0.2+b1sonic1.deb_statusd",
        "@libnl3//:libnl-nf-3-200_3.7.0-0.2+b1sonic1.deb_data",
        "@libnl3//:libnl-nf-3-200_3.7.0-0.2+b1sonic1.deb_statusd",
        "@libnl3//:libnl-route-3-200_3.7.0-0.2+b1sonic1.deb_data",
        "@libnl3//:libnl-route-3-200_3.7.0-0.2+b1sonic1.deb_statusd",
    ],
)

# APT-sourced runtime debs added on top of the docker-config-engine-trixie base.
# Mirrors docker-sysmgr/Dockerfile.j2 lines 12-15 `apt install -f -y libdbus-1-3
# libdbus-c++-1-0v5` PLUS the apt-provided runtime closure of the sysmgr
# binaries not already in the base. flatten() does NOT resolve Depends, so each
# is listed explicitly (see dockers/docker-base-trixie/base_trixie.MODULE.bazel
# docker-sysmgr block for the per-package rationale):
#   - libdbus-c++-1-0v5:            libdbus-c++-1.so.0 (the base dbus-c++ variant;
#                                   sysmgr links only this, not the ecore/glib
#                                   integrations — see src/sonic-sysmgr/BUILD.bazel).
#   - libhiredis1.1.0:              libhiredis.so.1.1.0 + libhiredis_ssl.so.1.1.0.
#   - libboost-serialization1.83.0: libboost_serialization.so.1.83.0.
#   - libpcre2-16-0/-32-0/-posix3:  the Bazel libyang3 links the full pcre2 suite
#                                   (Make's libyang pulls only libpcre2-8-0, which
#                                   is already in the base rootfs).
# libdbus-1-3 and libpcre2-8-0 are already shipped by the base, so they are a
# no-op reinstall in Make and not re-listed. The @trixie `:data` target ships
# both the filesystem contents and the /var/lib/dpkg/status.d entry.
flatten(
    name = "apt_layer",
    deduplicate = True,
    tars = [
        "@trixie//libdbus-c++-1-0v5:data",
        "@trixie//libhiredis1.1.0:data",
        "@trixie//libboost-serialization1.83.0:data",
        "@trixie//libpcre2-16-0:data",
        "@trixie//libpcre2-32-0:data",
        "@trixie//libpcre2-posix3:data",
    ],
)

# docker-sysmgr/Dockerfile.j2 lines 32-33: `mkdir -p /var/sonic` +
# `echo "# Config files managed by sonic-config-engine" > /var/sonic/config_status`.
# Materialized at build time as a tar entry rather than via a RUN step.
genrule(
    name = "gen_config_status",
    outs = ["config_status"],
    cmd = "echo '# Config files managed by sonic-config-engine' > $@",
)

# COPY'd SONiC files (docker-sysmgr/Dockerfile.j2 lines 35-36):
#   COPY ["supervisord.conf", "/etc/supervisor/conf.d/"]
#   COPY ["critical_processes", "/etc/supervisor"]
# plus the /var/sonic/config_status file created by the RUN steps above.
# supervisor-proc-exit-listener(-rs) is shipped by the docker-config-engine-trixie
# base (sonic-supervisord-utilities-rs deb) and referenced by supervisord.conf,
# so it is NOT re-copied here (matches the Make image, whose base already
# carries both /usr/bin/supervisor-proc-exit-listener-rs and the python
# /usr/local/bin/supervisor-proc-exit-listener).
tar(
    name = "files",
    srcs = [
        "supervisord.conf",
        "critical_processes",
        ":gen_config_status",
    ],
    mtree = [
        "./etc/supervisor/conf.d uid=0 gid=0 mode=0755 type=dir",
        "./etc/supervisor/conf.d/supervisord.conf uid=0 gid=0 mode=0644 type=file content=$(location :supervisord.conf)",
        "./etc/supervisor/critical_processes uid=0 gid=0 mode=0644 type=file content=$(location :critical_processes)",
        "./var/sonic/config_status uid=0 gid=0 mode=0644 type=file content=$(location :gen_config_status)",
    ],
)

# Make docker-sysmgr final stage (docker-sysmgr/Dockerfile.j2 lines 39-49):
# FROM $BASE; rsync_from_builder_stage(); ENV DEBIAN_FRONTEND=noninteractive;
# ENTRYPOINT ["/usr/local/bin/supervisord"]. The docker-config-engine-trixie
# base already sets the supervisord entrypoint; docker-sysmgr additionally
# persists DEBIAN_FRONTEND=noninteractive in the final image config.
oci_image(
    name = "docker-sysmgr",
    base = "//dockers/docker-config-engine-trixie:docker-config-engine-trixie",
    entrypoint = ["/usr/local/bin/supervisord"],
    env = {
        "DEBIAN_FRONTEND": "noninteractive",
    },
    # OCI config labels matching the Make image (added by SONiC build hooks).
    # com.azure.sonic.manifest is read by sonic-host-services to manage the
    # sysmgr container (service name, host-service, syslog rate-limit, etc.).
    # It is emitted here as COMPACT single-line JSON because rules_oci writes
    # one `key=value` line per label (oci/defs.bzl), so a value with embedded
    # newlines (Make ships pretty-printed JSON) would corrupt the label file;
    # the compact form is semantically identical. The version labels mirror the
    # SONiC debs the config-engine-trixie base contributes, and Tag is the image
    # version stamp.
    labels = {
        "Tag": "1.0.0",
        "com.azure.sonic.manifest": "{\"version\": \"1.0.0\", \"package\": {\"version\": \"1.0.0\", \"depends\": [], \"name\": \"sysmgr\"}, \"service\": {\"name\": \"sysmgr\", \"requires\": [], \"after\": [], \"before\": [], \"dependent-of\": [], \"asic-service\": false, \"host-service\": true, \"warm-shutdown\": {\"after\": [], \"before\": []}, \"fast-shutdown\": {\"after\": [], \"before\": []}, \"syslog\": {\"support-rate-limit\": true}}, \"container\": {\"privileged\": false, \"volumes\": [], \"tmpfs\": []}, \"cli\": {\"config\": \"\", \"show\": \"\", \"clear\": \"\"}}",
        "com.azure.sonic.versions.libswsscommon": "1.0.0",
        "com.azure.sonic.versions.sonic-supervisord-utilities-rs": "1.0.0",
    },
    tars = [
        ":sonic_pkgs",
        ":apt_layer",
        ":files",
    ],
    visibility = ["//visibility:public"],
)

oci_load(
    name = "load",
    image = "docker-sysmgr",
    repo_tags = ["docker-sysmgr:latest"],
)
